# data-pipeline-agent

./: README.md  pyproject.toml
pipeline_agent/: __init__.py  agent.py  cli.py  schema_inferrer.py
