[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-pipeline-agent"
version = "0.1.0"
description = "Build ETL pipelines from plain English using Claude AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["etl", "pipeline", "ai", "claude", "anthropic", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.0.0",
]
# Optional cloud connectors – install whichever you need
aws = ["boto3>=1.34.0", "s3fs>=2024.1.0"]
gcp = ["google-cloud-bigquery>=3.20.0", "db-dtypes>=1.2.0"]
postgres = ["psycopg2-binary>=2.9.0", "sqlalchemy>=2.0.0"]
mysql = ["pymysql>=1.1.0", "sqlalchemy>=2.0.0"]
all = [
    "boto3>=1.34.0",
    "s3fs>=2024.1.0",
    "google-cloud-bigquery>=3.20.0",
    "db-dtypes>=1.2.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
]

[project.scripts]
pipeline-agent = "pipeline_agent.cli:main"

[project.urls]
Homepage = "https://github.com/example/data-pipeline-agent"
Issues = "https://github.com/example/data-pipeline-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["pipeline_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PLC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
